--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,6 +2,7 @@ server {
     listen 80 default;
 
     client_max_body_size 108M;
+    send_timeout 20;
 
     server_name local.dev;
 
@@ -28,20 +29,23 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    location ~* \.PHP$ {
+    location ~* \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/errors.log";
-        fastcgi_intercept_errors off;
+        fastcgi_param PHP_VALUE "error_log=/var/log/phpfpm/errors.log";
+        fastcgi_param  PATH_INFO          $fastcgi_path_info;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
+        proxy_intercept_errors on;
+        fastcgi_intercept_errors on;
         include fastcgi_params;
     }
 
-    #location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-    #    expires 14d;
-    #}
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires 14d;
+    }
 
     location ~ /\.ht {
         deny all;
