--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,9 +2,8 @@ server {
     listen 80 default;
 
     client_max_body_size 108M;
-    send_timeout 20;
 
-    server_name local.dev;
+    send_timeout 20;
 
     root /var/www/html;
 
@@ -30,17 +29,18 @@ server {
     location = /robots.txt  { access_log off; log_not_found off; }
 
     location ~* \.php$ {
+        include fastcgi_params;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/phpfpm/errors.log";
-        fastcgi_param  PATH_INFO          $fastcgi_path_info;
+        fastcgi_param SCRIPT_FILENAME   $document_root$fastcgi_script_name;
+        fastcgi_param PHP_VALUE         "error_log=/var/log/phpfpm/errors.log";
+        fastcgi_param PATH_INFO         $fastcgi_path_info;
+        fastcgi_param SERVER_NAME       $host;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
         proxy_intercept_errors on;
         fastcgi_intercept_errors on;
-        include fastcgi_params;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
