--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,8 @@
 server {
-    listen 80 default;
+    listen   80; ## listen for ipv4; this line is default and implied
+	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-    client_max_body_size 108M;
+    client_max_body_size 520M;
 
     send_timeout 20;
 
@@ -13,8 +14,7 @@ server {
 
     index index.html index.php;
 
-    error_log /dev/stdout debug;
-    access_log /dev/stdout;
+    access_log /var/log/nginx/access.log;
 
     gzip on;
     gzip_min_length  1100;
@@ -29,8 +29,11 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
+    location = /favicon.ico {log_not_found off;access_log off;}
+
+	location = /robots.txt {allow all;log_not_found off;access_log off;}
+
+	location ~ /\. {deny all;access_log off;log_not_found off;}
 
     location ~* \.php$ {
         include fastcgi_params;
@@ -48,10 +51,7 @@ server {
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-        expires 14d;
-    }
-
-    location ~ /\.ht {
-        deny all;
-    }
+		expires 24h;
+		log_not_found off;
+	}
 }
