--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,20 @@
 version: '2'
 services:
-  memcached:
-    image: phpdockerio/memcached:latest
-    container_name: memcached
-
-  mailhog:
-    image: phpdockerio/mailhog:latest
-    container_name: mailhog
-    ports:
-      - "8081:8025"
-
   mysql:
-    image: mysql:5.7
+    image: treenity/mysql
     container_name: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=database
-      - MYSQL_USER=database
-      - MYSQL_PASSWORD=database
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
     ports:
       - "3306:3306"
     volumes:
-      - "../.docker/database:/var/lib/mysql"
+      - ./.docker/database:/var/lib/mysql
 
   webserver:
-    image: treenity/nginx
+    build: nginx
     container_name: webserver
     volumes_from:
       - php-fpm
@@ -37,7 +27,7 @@ services:
     image: treenity/php:7.0
     container_name: php-fpm
     volumes:
-      - ..:/var/www/html
+      - .:/var/www/html
       #- ./.docker/php-ini-overrides.ini:/etc/php/7.0/fpm/conf.d/99-overrides.ini
     links:
       - memcached
@@ -51,7 +41,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: pma
+    container_name: phpMyAdmin
     links:
       - mysql
     depends_on:
@@ -62,13 +52,23 @@ services:
       PMA_PASSWORD: root
     restart: always
     ports:
-      - "8181:80"
+      - "8080:80"
+
+  memcached:
+    image: phpdockerio/memcached:latest
+    container_name: memcached
+
+  mailhog:
+    image: phpdockerio/mailhog:latest
+    container_name: mailhog
+    ports:
+      - "8081:8025"
 
   blackfire:
     image: blackfire/blackfire
     container_name: blackfire
     environment:
-      BLACKFIRE_CLIENT_ID:
-      BLACKFIRE_CLIENT_TOKEN:
-      BLACKFIRE_SERVER_ID:
-      BLACKFIRE_SERVER_TOKEN:
+      BLACKFIRE_CLIENT_ID: API
+      BLACKFIRE_CLIENT_TOKEN: API
+      BLACKFIRE_SERVER_ID: API
+      BLACKFIRE_SERVER_TOKEN: API
