--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,9 @@
 FROM phpdockerio/nginx:latest
 MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 
-ADD ./conf.d/default.conf /etc/nginx/conf.d/
+COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./conf.d/default.conf /etc/nginx/conf.d/
+
+VOLUME ['/var/www/html']
+
+WORKDIR ['/var/www/html']
