--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,6 @@
 server {
-    listen 80 default;
-
-    client_max_body_size 108M;
+    listen   80; ## listen for ipv4; this line is default and implied
+    listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
     send_timeout 20;
 
@@ -11,39 +10,25 @@ server {
 
     root /var/www/html;
 
-    index index.html index.php;
+    index index.php index.html index.htm;
 
-    error_log /dev/stdout debug;
+    error_log /dev/stdout info;
     access_log /dev/stdout;
 
-    gzip on;
-    gzip_min_length  1100;
-    gzip_buffers  4 32k;
-
-    gzip_types text/plain text/css application/json application/x-javascript
-                   text/xml application/xml application/xml+rss text/javascript;
-    gzip_vary on;
-    gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { allow all; access_log off; log_not_found off; }
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/index.html /index.php?$query_string;
     }
-
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
 
     location ~* \.php$ {
         include fastcgi_params;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME   $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE         "error_log=/var/log/phpfpm/errors.log";
         fastcgi_param PATH_INFO         $fastcgi_path_info;
         fastcgi_param SERVER_NAME       $host;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        proxy_intercept_errors on;
         fastcgi_intercept_errors on;
     }
 
@@ -51,7 +36,8 @@ server {
         expires 14d;
     }
 
-    location ~ /\.ht {
+    location ~ /\. {
+        log_not_found off;
         deny all;
     }
 }
