--- a/fpm/5.6/php-ini-overrides.ini
+++ b/fpm/5.6/php-ini-overrides.ini
@@ -5,5 +5,5 @@ error_reporting = E_ALL
 display_errors = On
 date.timezone = UTC
 max_input_vars = 3000
-
+always_populate_raw_post_data=-1
 xdebug.remote_enable = 1
