--- a/fpm/7.1/Dockerfile
+++ b/fpm/7.1/Dockerfile
@@ -2,7 +2,7 @@ FROM phpdockerio/php71-fpm:latest
 
 # Install selected extensions and other stuff
 RUN apt-get update \
-    && apt-get -y --no-install-recommends install  php-memcached php7.1-mysql php7.1-gd php7.1-mbstring php7.1-tidy \
+    && apt-get -y --no-install-recommends install  php-memcached php7.1-mysql php7.1-gd php7.1-mbstring php7.1-tidy php7.0-curl \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 COPY ./php-ini-overrides.ini /etc/php/7.1/fpm/conf.d/99-overrides.ini
