--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   mysql:
-    image: treenity/mysql
+    image: Treenity/mysql
     container_name: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=root
@@ -24,14 +24,13 @@ services:
       - php-fpm
 
   php-fpm:
-    image: treenity/php:7.0
+    image: Treenity/php:7.1
     container_name: php-fpm
     volumes:
-      - .:/var/www/html
+      - ./:/var/www/html
       #- ./.docker/php-ini-overrides.ini:/etc/php/7.0/fpm/conf.d/99-overrides.ini
     links:
       - memcached
-      - mailhog
       - mysql
     ports:
       - "9000:9000"
