--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     ports:
       - "9000:9000"
     environment:
-      XDEBUG_CONFIG: "remote_host=192.168.1.10"
+      XDEBUG_CONFIG: "remote_host=192.168.1.10 remote_enable=0 profiler_enable=0"
       PHP_IDE_CONFIG: "serverName=docker"
 
   phpmyadmin:
