--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,6 +4,6 @@ MAINTAINER Ronan Pozzi <contact@treenity-web.fr>
 COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY ./conf.d/default.conf /etc/nginx/conf.d/
 
-VOLUME ['/var/www/html']
+VOLUME ['/var/www/html', '/etc/nginx/conf.d/']
 
 WORKDIR ['/var/www/html']
