--- a/fpm/5.6/php-ini-overrides.ini
+++ b/fpm/5.6/php-ini-overrides.ini
@@ -6,4 +6,6 @@ display_errors = On
 date.timezone = UTC
 max_input_vars = 3000
 always_populate_raw_post_data=-1
-xdebug.remote_enable = 1
+
+xdebug.remote_enable = off
+xdebug.profiler_enable = off
