--- a/fpm/7.0/php-ini-overrides.ini
+++ b/fpm/7.0/php-ini-overrides.ini
@@ -6,4 +6,5 @@ display_errors = On
 date.timezone = UTC
 max_input_vars = 3000
 
-xdebug.remote_enable = 1
+xdebug.remote_enable = off
+xdebug.profiler_enable = off
